优化代码结构，修复bug